--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-539-simple-house
 
 		<footer class="tm-footer text-center">
 			<p>KEVIN BRITO &copy; 2025 Cristal & Corcho
-				| Asignatura: Sistemas Operativos 2</a></p>
+				| Asignatura: Cloud Computing </a></p>
 		</footer>
 	</div>
 	<script src="js/jquery.min.js"></script>
