Update education and interests in info.html

--- a/info.html
+++ b/info.html
@@ -13,9 +13,9 @@
 
 <section>
     <p><strong>Nombres:</strong> Kevin Israel Brito Dumaguala</p>
-    <p><strong>Educación:</strong> Ingeniería en Sistemas – UTA</p>
+    <p><strong>Educación:</strong> Universidad de Cuenca – UCUENCA</p>
     <p><strong>Preferencias:</strong> Redes, Desarrollo Web, Docker</p>
-    <p><strong>Gustos:</strong> Música, videojuegos, tecnología</p>
+    <p><strong>Gustos:</strong> Música, videojuegos, Tecnología</p>
     <p><strong>Deporte Favorito:</strong> Fútbol</p>
 </section>
 
