--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ https://templatemo.com/tm-539-simple-house
 								<li class="tm-nav-li"><a href="index.html" class="tm-nav-link active">Home</a></li>
 								<li class="tm-nav-li"><a href="about.html" class="tm-nav-link">About</a></li>
 								<li class="tm-nav-li"><a href="contact.html" class="tm-nav-link">Contact</a></li>
+								<li class="tm-nav-li"><a href="info.html" class="tm-nav-link">Informacion</a></li>
 							</ul>
 						</nav>	
 					</div>
@@ -302,7 +303,7 @@ https://templatemo.com/tm-539-simple-house
 		<footer class="tm-footer text-center">
 			<p>KEVIN BRITO &copy; 2025 Cristal & Corcho 
             
-            | Asignatura: Sistemas Operativos 2</a></p>
+            | Asignatura: CLOUD COMPUTING </a></p>
 		</footer>
 	</div>
 	<script src="js/jquery.min.js"></script>
@@ -323,3 +324,4 @@ https://templatemo.com/tm-539-simple-house
 	</script>
 </body>
 </html>
+
