--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,7 @@ https://templatemo.com/tm-539-simple-house
 		<footer class="tm-footer text-center">
 			<p>KEVIN BRITO &copy; 2025 Cristal & Corcho 
             
-            | Asignatura: Sistemas Operativos 2</a></p>
+            | Asignatura: CLOUD COMPUTING </a></p>
 		</footer>
 	</div>
 	<script src="js/jquery.min.js"></script>
@@ -323,3 +323,4 @@ https://templatemo.com/tm-539-simple-house
 	</script>
 </body>
 </html>
+
