--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ https://templatemo.com/tm-539-simple-house
 								<li class="tm-nav-li"><a href="about.html" class="tm-nav-link">About</a></li>
 								<li class="tm-nav-li"><a href="contact.html" class="tm-nav-link">Contact</a></li>
 								<li class="tm-nav-li"><a href="info.html" class="tm-nav-link">Informacion</a></li>
+								<li class="tm-nav-li"><a href="info.html" class="tm-nav-link">Vista1</a></li>
+
 							</ul>
 						</nav>	
 					</div>
@@ -324,4 +326,5 @@ https://templatemo.com/tm-539-simple-house
 	</script>
 </body>
 </html>
+
 
