--- a/info.html
+++ b/info.html
@@ -2,21 +2,21 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Información Personal</title>
+    <title>Vista2</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Información Personal</h1>
+    <h1>Vista2</h1>
 </header>
 
 <section>
-    <p><strong>Nombres:</strong> Kevin Israel Brito Dumaguala</p>
-    <p><strong>Educación:</strong> Universidad de Cuenca – UCUENCA</p>
-    <p><strong>Preferencias:</strong> Redes, Desarrollo Web, Docker</p>
-    <p><strong>Gustos:</strong> Música, videojuegos, Tecnología</p>
-    <p><strong>Deporte Favorito:</strong> Fútbol</p>
+    <h2>Acceso Remoto</h2>
+        <p><strong>Anydesk:</strong> Software de acceso remoto que permite conectarse y controlar otro ordenador desde cualquier lugar del mundo de forma segura y rápida.</p>
+
+        <p><strong>TeamViewer:</strong> Programa de acceso remoto y soporte técnico, que permite controlar equipos, transferir archivos y realizar reuniones online de manera segura.</p>
+    </div>
 </section>
 
 </body>
