--- a/info.html
+++ b/info.html
@@ -2,20 +2,34 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Vista2</title>
+    <title>Vista1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Vista2</h1>
+    <h1>Vista1</h1>
 </header>
 
 <section>
-    <h2>Acceso Remoto</h2>
-        <p><strong>Anydesk:</strong> Software de acceso remoto que permite conectarse y controlar otro ordenador desde cualquier lugar del mundo de forma segura y rápida.</p>
+<h1>Conceptos de Cloud Computing y Acceso Remoto</h1>
 
-        <p><strong>TeamViewer:</strong> Programa de acceso remoto y soporte técnico, que permite controlar equipos, transferir archivos y realizar reuniones online de manera segura.</p>
+    <div class="tabs">
+        <div class="tab active" onclick="showTab(1)">Cloud</div>
+    </div>
+
+    <div id="tab1" class="content active">
+        <h2>Cloud Computing</h2>
+        <p><strong>Cloud Computing:</strong> Es la entrega de servicios informáticos (almacenamiento, servidores, bases de datos, redes y software) a través de Internet, permitiendo acceder a recursos sin necesidad de tenerlos físicamente.</p>
+
+        <p><strong>SaaS, PaaS e IaaS:</strong><br>
+        <strong>SaaS (Software as a Service):</strong> Software disponible por Internet, sin instalar, ejemplo: Google Docs, Zoom.<br>
+        <strong>PaaS (Platform as a Service):</strong> Plataforma que permite desarrollar y desplegar aplicaciones, ejemplo: Heroku, Google App Engine.<br>
+        <strong>IaaS (Infrastructure as a Service):</strong> Infraestructura como servicio: servidores, almacenamiento y redes virtuales, ejemplo: AWS, Microsoft Azure.</p>
+
+        <p><strong>Virtualización:</strong> Creación de una versión virtual de un recurso físico, como un servidor o sistema operativo, permitiendo ejecutar varios entornos independientes en un mismo hardware.</p>
+
+        <p><strong>Docker:</strong> Plataforma que permite crear, desplegar y ejecutar aplicaciones en contenedores, los cuales incluyen todo lo necesario para que el software funcione de manera consistente en cualquier entorno.</p>
     </div>
 </section>
 
